--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://bbxuglhhzmqd6cdh001u-mysql.services.clever-cloud.com:3306/bbxuglhhzmqd6cdh001u
-spring.datasource.username=u3vsmijytytj2dzd
-spring.datasource.password=RjE1IyCtliPnfsgjJfy3
+spring.datasource.url=jdbc:mysql://
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
