--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/maquila?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Syntavo0-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
